fix: web3Onboard context wrapped in client side component, added dependencies for icons

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -262,7 +262,7 @@ body {
   }
 
   .first-section {
-    @apply mx-auto md:p-16 pb-12 !pt-[126px] px-8 h-svh gap-12 flex flex-row;
+    @apply mx-auto md:p-16 pb-12 !pt-[126px] px-8 h-svh flex flex-row;
   }
 
   .custom-scrollbar {
@@ -342,11 +342,11 @@ body {
   }
 
   .input {
-    @apply bg-white border border-gray-200 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mt-2.5 font-normal shadow-card;
+    @apply bg-white border border-gray-200 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mt-2.5 font-normal;
   }
 
   .textarea {
-    @apply block p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-200 focus:ring-blue-500 focus:border-blue-500 mt-2.5 font-normal shadow-card;
+    @apply block p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-200 focus:ring-blue-500 focus:border-blue-500 mt-2.5 font-normal;
   }
 
   .btn {
